hard cut sound in VSE resets Waveform #114951

Closed
opened 2023-11-16 03:36:52 +01:00 by Homar Orozco Apaza · 4 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23

Blender Version
Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: 878f71061b8e
Worked: version:3.6LTS

Caused by b21695a507

Short description of error
When I hard cut a sound strip (using shift K) the wave as displayed by DisplayWaveform is reseted in both new strips and no longer in sync with the video.

Exact steps for others to reproduce the error
-Enable DisplayWaveform for audio strip
-Move the header to somewhere in the middle
-Press shift K to hard split the strips (watch how the graph of the sound Waveform is reseted instead of being splitted)

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23 **Blender Version** Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: `878f71061b8e` Worked: version:3.6LTS Caused by b21695a507cd2d50d9855fc64ee92632d4e97c2b **Short description of error** When I hard cut a sound strip (using shift K) the wave as displayed by DisplayWaveform is reseted in both new strips and no longer in sync with the video. **Exact steps for others to reproduce the error** -Enable DisplayWaveform for audio strip -Move the header to somewhere in the middle -Press shift K to hard split the strips (watch how the graph of the sound Waveform is reseted instead of being splitted)
Homar Orozco Apaza added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-16 03:36:53 +01:00
Member

Thanks for the report. I can confirm this works in 3.6-release but I observed same bug in 3.6 alpha builds.
So I'm not able to locate exact good and bad commits for bisecting.

Thanks for the report. I can confirm this works in 3.6-release but I observed same bug in 3.6 alpha builds. So I'm not able to locate exact good and bad commits for bisecting.
Member

On main (3.6 alpha), bug came between bd86e719ab - 993d24c174

On main (3.6 alpha), bug came between bd86e719ab91 - 993d24c1749c
Member

Caused by b21695a507

CC @iss

Caused by b21695a507cd2d50d9855fc64ee92632d4e97c2b CC @iss

Now I am not sure whether I did this deliberately or not. I wanted to preplace anim_ofs, but not sure if that will happen soon, since I need to have a design for that. Will check in any case.

Now I am not sure whether I did this deliberately or not. I wanted to preplace `anim_ofs`, but not sure if that will happen soon, since I need to have a design for that. Will check in any case.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-09 20:19:41 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:04:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114951
No description provided.