Fix #114951: Waveform drawn incorrectly in strips with hold offset

Caused by not applying the offset to start frame calculation.
Also fixes reverse offsetting of waveform when start offset was
negative - content start frame was used instead of handle frame.